--- a/SkiResortChallenge/SkiResortChallenge.csproj
+++ b/SkiResortChallenge/SkiResortChallenge.csproj
@@ -43,8 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cell.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SkiResortMatrix.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
