--- a/SkiResortChallenge/SkiResortChallenge.csproj
+++ b/SkiResortChallenge/SkiResortChallenge.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cell.cs" />
+    <Compile Include="Coordinate.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SkiResortMatrix.cs" />
