Load matrix from File

--- a/SkiResortChallenge/App.config
+++ b/SkiResortChallenge/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+  <appSettings>
+    <add key="4x4" value="C:\Users\Miguel\source\repos\SkiResortChallenge\SkiResortChallenge\4x4.txt" />
+    <add key="1000*1000" value="C:\Users\Miguel\source\repos\SkiResortChallenge\SkiResortChallenge\map.txt" />
+  </appSettings>
 </configuration>
