--- a/SkiResortChallenge/App.config
+++ b/SkiResortChallenge/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
   <appSettings>
-    <add key="4x4" value="C:\Users\Miguel\source\repos\SkiResortChallenge\SkiResortChallenge\4x4.txt" />
-    <add key="1000*1000" value="C:\Users\Miguel\source\repos\SkiResortChallenge\SkiResortChallenge\map.txt" />
+    <add key="4x4" value="C:\Users\Miguel\source\repos\SkiResortChallenge\SkiResortChallenge\Files\4x4.txt" />
+    <add key="1000*1000" value="C:\Users\Miguel\source\repos\SkiResortChallenge\SkiResortChallenge\Files\map.txt" />
   </appSettings>
 </configuration>
