--- a/SkiResortChallenge/SkiResortChallenge.csproj
+++ b/SkiResortChallenge/SkiResortChallenge.csproj
@@ -63,21 +63,21 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cell.cs" />
-    <Compile Include="Coordinate.cs" />
+    <Compile Include="Entities\Cell.cs" />
+    <Compile Include="Entities\Coordinate.cs" />
     <Compile Include="Helper\Helper.cs" />
     <Compile Include="Helper\Settings.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SkiResortMatrix.cs" />
+    <Compile Include="Logic\SkiResortMatrix.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="4x4.txt" />
-    <Content Include="map.txt" />
+    <Content Include="Files\4x4.txt" />
+    <Content Include="Files\map.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
